-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
RSSD
-
Fully Compatible
-
ALL
-
None
-
None
-
None
-
None
-
None
-
None
-
None
When we are running with a PersistenceProvider mode where we data is not available immediately after initializing the storage engine, we may need to run startup recovery after loading the initial WT checkpoint to complete server startup. This invariant (added in SERVER-57812 here) takes into account the command line settings for replica sets but not the new PersistenceProvider option. We usually run --replSet in this PersistenceProvider mode, but this is not always the case. We have made similar exemptions in the startup recovery module recently in SERVER-116473.
- is related to
-
SERVER-116473 check persistence provider during FCV startup initialization check
-
- Closed
-
-
SERVER-57812 Make it possible to re-run startup recovery
-
- Closed
-