SERVER-117437 check persistence provider in runStartupRecovery() (#46634)

Co-authored-by: Wei Hu <wei.hu@mongodb.com>
GitOrigin-RevId: 525887e5a901862ebb15f1b495d8a1bb35aa7d42